# alebrije-website

./: .dockerignore  .gitignore  .gitmodules  Anchor.toml  COMPREHENSIVE_DEPLOYMENT.md  Dockerfile  LICENSE  RAILWAY-ENV-GUIDE.md  README.md  SMART-BURN-IMPLEMENTATION.md  alebrije.code-workspace  bot.js  check-keypairs.js  community-marketing-plan.md  config.js  craco.config.js  debug-ownership.js  debug-token.js  deploy-commands.js  deploy-smart-burn-simple.js  deploy-smart-burn.js  distribute-simple.js  documentation-plan.md  execute-distribution.js  fix-dependencies.js  full-bot.js  generate-test-wallet.js  index.html  integration-plan.md  jest.config.js  jest.setup.js  minimal-bot.js  netlify.toml  package-lock.json  package.json  remove_node_modules.sh  spirits.js  test-bot.js  verify-distribution.js  verify-railway-deployment.sh  (+2 more)
.github/: BRANCH-PROTECTION.md  CODEOWNERS  REPOSITORY-SETTINGS.md
alebrije-backend/: .env
alebrije-frontend/: .gitignore  DEPLOYMENT-INSTRUCTIONS.md  README.md  TEST_MODE_SETUP.md  capture-original-assets.sh  deploy-main.sh  deploy-whitepaper.sh  deploy.sh  fix-and-deploy.sh  fix-dev.sh  index.html  jest.config.js  netlify.toml  package-lock.json  package-lock.json.bak  package.json  package.json.bak  standalone-whitepaper.html  tsconfig.json  verify-pdf.js  vite.config.js  vite.config.ts
alebrije-wallet/: alebrije-keypair.json  build_log.txt  craco.config.js  deploy_log.txt  package-lock.json  package.json  rollback.sh
alebrije-website/: .gitignore  (+6 more)
programs/alebrije-coin/: Cargo.toml
programs/alebrije-coin/src/: lib.rs
(+246 files in other folders)
